Added boxes and 1 photo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
   <a href="#">About</a>
 </nav>
     </head>
+    <section>
+      <h3>There are <strong>6</strong> photos</h3>
+    </section>
+<main>
+  <div class="box">
+    <img src="https://unsplash.it/200/400?random=1234567">
+  </div>
+  <div class="box">
+  </div>
+  <div class="box">
+  </div>
+  <div class="box">
+  </div>
+  <div class="box">
+  </div>
+  <div class="box">
+  </div>
+
+</main>
 
   </body>
 </html>
