Added 6 photos and edit | Delete buttons

--- a/index.html
+++ b/index.html
@@ -21,17 +21,29 @@
     </section>
 <main>
   <div class="box">
-    <img src="https://unsplash.it/200/400?random=1234567">
+    <img src="https://unsplash.it/300/400?random=1234547">
+    Edit | Delete
   </div>
   <div class="box">
+    <img src="https://unsplash.it/300/400?random=1234547">
+    Edit | Delete
   </div>
   <div class="box">
+    <img src="https://unsplash.it/300/400?random=1234547">
+    Edit | Delete
+  </div>
+  <br>
+  <div class="box">
+    <img src="https://unsplash.it/300/400?random=1234547">
+    Edit | Delete
   </div>
   <div class="box">
+    <img src="https://unsplash.it/300/400?random=1234547">
+    Edit | Delete
   </div>
   <div class="box">
-  </div>
-  <div class="box">
+    <img src="https://unsplash.it/300/400?random=1234547">
+    Edit | Delete
   </div>
 
 </main>
