Added padding and margins

--- a/index.html
+++ b/index.html
@@ -22,31 +22,32 @@
 <main>
   <div class="box">
     <img src="https://unsplash.it/300/400?random=1234547">
-    Edit | Delete
+    <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <div class="box">
     <img src="https://unsplash.it/300/400?random=1234547">
-    Edit | Delete
+    <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <div class="box">
     <img src="https://unsplash.it/300/400?random=1234547">
-    Edit | Delete
+    <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <br>
   <div class="box">
     <img src="https://unsplash.it/300/400?random=1234547">
-    Edit | Delete
+    <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <div class="box">
     <img src="https://unsplash.it/300/400?random=1234547">
-    Edit | Delete
+    <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <div class="box">
     <img src="https://unsplash.it/300/400?random=1234547">
-    Edit | Delete
+    <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
-
 </main>
-
+<footer>
+<p class="footer">© Bitmaker 2016</p>
+</footer>
   </body>
 </html>
