--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <heaHd>
+    <head>
       <h1>Bitmaker Photo Gallery</h1>
 <nav>
   <a href="#">Home</a>
@@ -16,38 +16,38 @@
   <a href="#">About</a>
 </nav>
     </head>
-    <section>
-      <h3>There are <strong>6</strong> photos</h3>
-    </section>
 <main>
+  <div class="giant-box">
+      <h3>There are <strong>6</strong> photos</h3>
   <div class="box">
-    <img src="https://unsplash.it/300/400?random=1234547">
+    <img src="https://unsplash.it/300/400?random=2234547">
     <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <div class="box">
-    <img src="https://unsplash.it/300/400?random=1234547">
+    <img src="https://unsplash.it/300/400?random=1334547">
     <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <div class="box">
-    <img src="https://unsplash.it/300/400?random=1234547">
+    <img src="https://unsplash.it/300/400?random=1244547">
     <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <br>
   <div class="box">
-    <img src="https://unsplash.it/300/400?random=1234547">
+    <img src="https://unsplash.it/300/400?random=1235547">
     <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <div class="box">
-    <img src="https://unsplash.it/300/400?random=1234547">
+    <img src="https://unsplash.it/300/400?random=1234647">
     <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
   <div class="box">
-    <img src="https://unsplash.it/300/400?random=1234547">
+    <img src="https://unsplash.it/300/400?random=1234545">
     <p class="buttons"><a href="#">Edit</a> | <a href="#">Delete</a>
   </div>
+</div>
 </main>
-<footer>
-<p class="footer">© Bitmaker 2016</p>
-</footer>
+  <footer>
+    <p class="footer">© Bitmaker 2016</p>
+  </footer>
   </body>
 </html>
